--- a/index.html
+++ b/index.html
@@ -1,153 +1,68 @@
 <!DOCTYPE html>
-<html>
-	<style>
-		img {
-			display: block;
-			margin-left:auto;
-			margin-right:auto;
-			width:30%;
-		}
-		</style>
-		<img src="platissa logo.png" alt="Logo Platissa">
+<html lang="es">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body {margin:0;font-family:Arial}
-
-.topnav {
-  overflow: hidden;
-  background-color: #ffffff;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: #000000;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.active {
-  background-color: #ffffff;
-  color: rgb(0, 0, 0);
-}
-
-.topnav .icon {
-  display: none;
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 17px;    
-  border: none;
-  outline: none;
-  color: rgb(0, 0, 0);
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #ffffff;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: rgb(0, 0, 0);
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: #ffe3e39b;
-  color: rgb(0, 0, 0);
-}
-
-.dropdown-content a:hover {
-  background-color: #ffe3e3;
-  color: black;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child), .dropdown .dropbtn {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .topnav.responsive .dropdown {float: none;}
-  .topnav.responsive .dropdown-content {position: relative;}
-  .topnav.responsive .dropdown .dropbtn {
-    display: block;
-    width: 100%;
-    text-align: left;
-  }
-}
-</style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bienvenidos</title>
+    <link href="https://fonts.googleapis.com/css2?family=DejaVu+Sans+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to the second CSS file -->
 </head>
 <body>
+    <div class="hero">
+        <nav>
+            <img src="platissa logo.png" class="logo" alt="Logo">
+            <ul>
+                <li><a href="index.html" class="active">Inicio</a></li>
+                <li><a href="Sucursales.html" target="_blank">Sucursales</a></li>
+                <li><a href="Materiales.html" target="_blank">Materiales</a></li>
+                <li><a href="Accesorios.html" target="_blank">Accesorios</a></li>
+                <li><a href="#">Redes Sociales</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+            <div class="menu-container">
+                <img src="menu.png" class="menu-img" alt="Menu">
+                <div class="dropdown-menu">
+                    <a href="index.html">Inicio</a>
+                    <a href="Sucursales.html" target="_blank">Sucursales</a>
+                    <a href="Materiales.html" target="_blank">Materiales</a>
+                    <a href="Accesorios.html" target="_blank">Accesorios</a>
+                    <a href="#">Redes Sociales</a>
+                    <a href="#">Contacto</a>
+                </div>
+            </div>
+        </nav>
+        <div class="row">
+            <div class="col">
+                <h1>Toda felicidad depende de una <br> joya preciosa.</h1>
+                <a href="Accesorios.html" target="_blank" class="order-button">Ordena ya</a>
+            </div>
+            <div class="col">
+                <img src="corazonup.svg" class="feature-img" alt="Corazón"> <!-- Imagen actualizada -->
+            </div>
+        </div>
+    </div>
 
-<div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Inicio </a>
-  <a href="Sucursales.html"target="_blank">Sucursales</a>
-  <a href="Materiales.html"target="_blank">Materiales</a>
-  <div class="dropdown">
-    <button class="dropbtn">Accesorios 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="collares.html">Collares</a>
-      <a href="cadenas.html">Cadenas</a>
-      <a href="Anillos.html">Anillos</a>
-	  <a href="Aretes.html">Aretes</a>
-	  <a href="Pulseras.html">Pulseras</a>
+    <div class="gallery-container">
+        <h1>Checa nuestros estilos de temporada</h1>
+        <div class="gallery">
+            <div class="image-box active">
+                <img src="img1.jpg" alt="Imagen 1">
+            </div>
+            <div class="image-box">
+                <img src="img2.jpg" alt="Imagen 2">
+            </div>
+            <div class="image-box">
+                <img src="img3.jpg" alt="Imagen 3">
+            </div>
+            <div class="image-box">
+                <img src="img4.jpg" alt="Imagen 4">
+            </div>
+            <div class="image-box">
+                <img src="img5.jpg" alt="Imagen 5">
+            </div>
+        </div>
     </div>
-  </div> 
-  <div class="dropdown">
-    <button class="dropbtn">Redes Sociales 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="https://www.instagram.com/platissa_" target="_blank">Instagram</a> 
-      <a href="https://www.facebook.com/profile.php?id=100064070163654" target="_blank">Facebook</a>
-      <a href="#">Tiktok</a>
-    </div>
-  </div> 
-  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-</div>
 </body>
 </html>
